--- a/UJIMotorsport.ioc
+++ b/UJIMotorsport.ioc
@@ -1,48 +1,83 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-3\#ChannelRegularConversion=1
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
+CAN1.CalculateBaudRate=875000
+CAN1.CalculateTimeBit=1142
+CAN1.CalculateTimeQuantum=380.95238095238096
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=DAC
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USB_HOST
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP0=ADC1
+Mcu.IP1=CAN1
+Mcu.IP10=USB_HOST
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=DAC
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=USART3
+Mcu.IP9=USART6
+Mcu.IPNb=12
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB2
-Mcu.Pin13=PB10
-Mcu.Pin14=PD12
-Mcu.Pin15=PD13
-Mcu.Pin16=PD14
-Mcu.Pin17=PD15
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PA4
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PB1
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PD4
-Mcu.Pin25=PD5
-Mcu.Pin26=PB3
-Mcu.Pin27=PE1
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin20=PB2
+Mcu.Pin21=PB10
+Mcu.Pin22=PB11
+Mcu.Pin23=PB13
+Mcu.Pin24=PB14
+Mcu.Pin25=PB15
+Mcu.Pin26=PD8
+Mcu.Pin27=PD10
+Mcu.Pin28=PD11
+Mcu.Pin29=PD12
 Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=PD13
+Mcu.Pin31=PD14
+Mcu.Pin32=PD15
+Mcu.Pin33=PC6
+Mcu.Pin34=PC7
+Mcu.Pin35=PA9
+Mcu.Pin36=PA10
+Mcu.Pin37=PA11
+Mcu.Pin38=PA12
+Mcu.Pin39=PA13
 Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=PA14
+Mcu.Pin41=PD0
+Mcu.Pin42=PD1
+Mcu.Pin43=PD4
+Mcu.Pin44=PD5
+Mcu.Pin45=PB3
+Mcu.Pin46=PE1
+Mcu.Pin47=VP_SYS_VS_Systick
+Mcu.Pin48=VP_USB_HOST_VS_USB_HOST_CDC_FS
 Mcu.Pin5=PC0
-Mcu.Pin6=PC3
-Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=30
+Mcu.Pin6=PC1
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=49
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -66,6 +101,7 @@ PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
+PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA10.GPIO_Label=OTG_FS_ID
 PA10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -99,6 +135,8 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Signal=ADCx_IN2
+PA3.Signal=ADCx_IN3
 PA4.Locked=true
 PA4.Signal=COMP_DAC1_group
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -132,6 +170,8 @@ PA9.GPIO_PuPd=GPIO_NOPULL
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
+PB0.Signal=ADCx_IN8
+PB1.Signal=ADCx_IN9
 PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
 PB10.GPIO_Mode=GPIO_MODE_AF_PP
@@ -139,10 +179,20 @@ PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB10.Locked=true
 PB10.Signal=I2S2_CK
-PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB2.GPIO_Label=BOOT1
-PB2.GPIO_Mode=GPIO_MODE_INPUT
-PB2.GPIO_PuPd=GPIO_NOPULL
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=CAN_SCK
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=CAN_MISO
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=CAN_MOSI
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
@@ -156,6 +206,7 @@ PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC0.Locked=true
 PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
+PC1.Signal=ADCx_IN11
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 PC14-OSC32_IN.Locked=true
@@ -173,6 +224,20 @@ PC3.GPIO_PuPd=GPIO_NOPULL
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC3.Locked=true
 PC3.Signal=I2S2_SD
+PC4.Signal=ADCx_IN14
+PC5.Signal=ADCx_IN15
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
+PD0.Mode=CAN_Activate
+PD0.Signal=CAN1_RX
+PD1.Mode=CAN_Activate
+PD1.Signal=CAN1_TX
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.Locked=true
+PD11.Signal=GPIO_Output
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD12.GPIO_Label=LD4 [Green Led]
 PD12.GPIO_PuPd=GPIO_NOPULL
@@ -209,16 +274,14 @@ PD5.GPIO_Mode=GPIO_MODE_INPUT
 PD5.GPIO_PuPd=GPIO_NOPULL
 PD5.Locked=true
 PD5.Signal=GPIO_Input
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
 PE1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PE1.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PE1.Signal=GPXTI1
-PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
-PE3.GPIO_PuPd=GPIO_NOPULL
-PE3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PH0-OSC_IN.GPIOParameters=GPIO_Label
@@ -292,6 +355,22 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN11.0=ADC1_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
+SH.ADCx_IN14.0=ADC1_IN14,IN14
+SH.ADCx_IN14.ConfNb=1
+SH.ADCx_IN15.0=ADC1_IN15,IN15
+SH.ADCx_IN15.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
+SH.ADCx_IN9.0=ADC1_IN9,IN9
+SH.ADCx_IN9.ConfNb=1
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
@@ -305,6 +384,15 @@ SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Du
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=21.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
+USART6.IPParameters=VirtualMode
+USART6.VirtualMode=VM_ASYNC
 USB_HOST.BSP.number=1
 USB_HOST.IPParameters=VirtualModeFS,USBH_HandleTypeDef-CDC_FS
 USB_HOST.USBH_HandleTypeDef-CDC_FS=hUsbHostFS
