--- a/UJIMotorsport.ioc
+++ b/UJIMotorsport.ioc
@@ -74,7 +74,7 @@ Mcu.Pin44=PD5
 Mcu.Pin45=PB3
 Mcu.Pin46=PE1
 Mcu.Pin47=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin48=VP_SYS_VS_tim1
+Mcu.Pin48=VP_SYS_VS_tim6
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC3
@@ -99,9 +99,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
-NVIC.TimeBase=TIM1_UP_TIM10_IRQn
-NVIC.TimeBaseIP=TIM1
+NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
@@ -403,8 +403,8 @@ USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=STM32F407G-DISC1
 boardIOC=true
 isbadioc=false
