--- a/UJIMotorsport.ioc
+++ b/UJIMotorsport.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-3\#ChannelRegularConversion=1
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -45,42 +46,50 @@ Mcu.Pin18=PB0
 Mcu.Pin19=PB1
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PB2
-Mcu.Pin21=PB10
-Mcu.Pin22=PB11
-Mcu.Pin23=PB13
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PD8
-Mcu.Pin27=PD10
-Mcu.Pin28=PD11
-Mcu.Pin29=PD12
+Mcu.Pin21=PE8
+Mcu.Pin22=PE9
+Mcu.Pin23=PE10
+Mcu.Pin24=PE11
+Mcu.Pin25=PE12
+Mcu.Pin26=PE13
+Mcu.Pin27=PE14
+Mcu.Pin28=PE15
+Mcu.Pin29=PB10
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PD13
-Mcu.Pin31=PD14
-Mcu.Pin32=PD15
-Mcu.Pin33=PC6
-Mcu.Pin34=PC7
-Mcu.Pin35=PA9
-Mcu.Pin36=PA10
-Mcu.Pin37=PA11
-Mcu.Pin38=PA12
-Mcu.Pin39=PA13
+Mcu.Pin30=PB11
+Mcu.Pin31=PB13
+Mcu.Pin32=PB14
+Mcu.Pin33=PB15
+Mcu.Pin34=PD8
+Mcu.Pin35=PD10
+Mcu.Pin36=PD11
+Mcu.Pin37=PD12
+Mcu.Pin38=PD13
+Mcu.Pin39=PD14
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=PA14
-Mcu.Pin41=PD0
-Mcu.Pin42=PD1
-Mcu.Pin43=PD4
-Mcu.Pin44=PD5
-Mcu.Pin45=PB3
-Mcu.Pin46=PE1
-Mcu.Pin47=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin48=VP_SYS_VS_tim6
+Mcu.Pin40=PD15
+Mcu.Pin41=PC6
+Mcu.Pin42=PC7
+Mcu.Pin43=PA9
+Mcu.Pin44=PA10
+Mcu.Pin45=PA11
+Mcu.Pin46=PA12
+Mcu.Pin47=PA13
+Mcu.Pin48=PA14
+Mcu.Pin49=PD0
 Mcu.Pin5=PC0
+Mcu.Pin50=PD1
+Mcu.Pin51=PD4
+Mcu.Pin52=PD5
+Mcu.Pin53=PB3
+Mcu.Pin54=PE1
+Mcu.Pin55=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin56=VP_SYS_VS_tim6
 Mcu.Pin6=PC1
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=49
+Mcu.PinsNb=57
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -287,8 +296,24 @@ PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 PE1.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PE1.Signal=GPXTI1
+PE10.Locked=true
+PE10.Signal=GPIO_Input
+PE11.Locked=true
+PE11.Signal=GPIO_Input
+PE12.Locked=true
+PE12.Signal=GPIO_Input
+PE13.Locked=true
+PE13.Signal=GPIO_Input
+PE14.Locked=true
+PE14.Signal=GPIO_Input
+PE15.Locked=true
+PE15.Signal=GPIO_Input
 PE3.Locked=true
 PE3.Signal=GPIO_Output
+PE8.Locked=true
+PE8.Signal=GPIO_Input
+PE9.Locked=true
+PE9.Signal=GPIO_Input
 PH0-OSC_IN.GPIOParameters=GPIO_Label
 PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
 PH0-OSC_IN.Locked=true
