Added ADC and removed semihosting

--- a/UJIMotorsport.ioc
+++ b/UJIMotorsport.ioc
@@ -1,16 +1,49 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC1.Channel-13\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC1.Channel-14\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-15\#ChannelRegularConversion=ADC_CHANNEL_VBAT
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.ContinuousConvMode=ENABLE
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-5\#ChannelRegularConversion,master,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,NbrOfConversionFlag,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion,ExternalTrigConv,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,Rank-15\#ChannelRegularConversion,Channel-15\#ChannelRegularConversion,SamplingTime-15\#ChannelRegularConversion
+ADC1.NbrOfConversion=11
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-3\#ChannelRegularConversion=1
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-10\#ChannelRegularConversion=6
+ADC1.Rank-11\#ChannelRegularConversion=7
+ADC1.Rank-12\#ChannelRegularConversion=8
+ADC1.Rank-13\#ChannelRegularConversion=9
+ADC1.Rank-14\#ChannelRegularConversion=10
+ADC1.Rank-15\#ChannelRegularConversion=11
+ADC1.Rank-5\#ChannelRegularConversion=1
+ADC1.Rank-6\#ChannelRegularConversion=2
+ADC1.Rank-7\#ChannelRegularConversion=3
+ADC1.Rank-8\#ChannelRegularConversion=4
+ADC1.Rank-9\#ChannelRegularConversion=5
+ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-13\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-14\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-15\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.master=1
 CAN1.CalculateBaudRate=875000
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_NEWLIB_REENTRANT
+FREERTOS.INCLUDE_vTaskDelayUntil=1
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_NEWLIB_REENTRANT,INCLUDE_vTaskDelayUntil
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
@@ -83,18 +116,22 @@ Mcu.Pin51=PD4
 Mcu.Pin52=PD5
 Mcu.Pin53=PB3
 Mcu.Pin54=PE1
-Mcu.Pin55=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin56=VP_SYS_VS_tim6
+Mcu.Pin55=VP_ADC1_TempSens_Input
+Mcu.Pin56=VP_ADC1_Vref_Input
+Mcu.Pin57=VP_ADC1_Vbat_Input
+Mcu.Pin58=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin59=VP_SYS_VS_tim6
 Mcu.Pin6=PC1
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=57
+Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
+NVIC.ADC_IRQn=true\:5\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.ForceEnableDMAVector=true
@@ -426,6 +463,12 @@ USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
+VP_ADC1_Vbat_Input.Mode=IN-Vbat
+VP_ADC1_Vbat_Input.Signal=ADC1_Vbat_Input
+VP_ADC1_Vref_Input.Mode=IN-Vrefint
+VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim6.Mode=TIM6
