Added fatfs, needs checking

--- a/UJIMotorsport.ioc
+++ b/UJIMotorsport.ioc
@@ -54,17 +54,19 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=USART3
-Mcu.IP11=USART6
+Mcu.IP10=SPI2
+Mcu.IP11=SYS
+Mcu.IP12=USART3
+Mcu.IP13=USART6
 Mcu.IP2=CRC
 Mcu.IP3=DAC
-Mcu.IP4=FREERTOS
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SPI1
-Mcu.IP8=SPI2
-Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IP4=FATFS
+Mcu.IP5=FREERTOS
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SDIO
+Mcu.IP9=SPI1
+Mcu.IPNb=14
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -105,30 +107,37 @@ Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin40=PD15
 Mcu.Pin41=PC6
 Mcu.Pin42=PC7
-Mcu.Pin43=PA9
-Mcu.Pin44=PA10
-Mcu.Pin45=PA11
-Mcu.Pin46=PA12
-Mcu.Pin47=PA13
-Mcu.Pin48=PA14
-Mcu.Pin49=PD0
+Mcu.Pin43=PC8
+Mcu.Pin44=PC9
+Mcu.Pin45=PA9
+Mcu.Pin46=PA10
+Mcu.Pin47=PA11
+Mcu.Pin48=PA12
+Mcu.Pin49=PA13
 Mcu.Pin5=PC0
-Mcu.Pin50=PD1
-Mcu.Pin51=PD4
-Mcu.Pin52=PD5
-Mcu.Pin53=PB3
-Mcu.Pin54=PE1
-Mcu.Pin55=VP_ADC1_TempSens_Input
-Mcu.Pin56=VP_ADC1_Vref_Input
-Mcu.Pin57=VP_ADC1_Vbat_Input
-Mcu.Pin58=VP_CRC_VS_CRC
-Mcu.Pin59=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin50=PA14
+Mcu.Pin51=PC10
+Mcu.Pin52=PC11
+Mcu.Pin53=PC12
+Mcu.Pin54=PD0
+Mcu.Pin55=PD1
+Mcu.Pin56=PD2
+Mcu.Pin57=PD4
+Mcu.Pin58=PD5
+Mcu.Pin59=PB3
 Mcu.Pin6=PC1
-Mcu.Pin60=VP_SYS_VS_tim6
+Mcu.Pin60=PE1
+Mcu.Pin61=VP_ADC1_TempSens_Input
+Mcu.Pin62=VP_ADC1_Vref_Input
+Mcu.Pin63=VP_ADC1_Vbat_Input
+Mcu.Pin64=VP_CRC_VS_CRC
+Mcu.Pin65=VP_FATFS_VS_SDIO
+Mcu.Pin66=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin67=VP_SYS_VS_tim6
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=61
+Mcu.PinsNb=68
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -261,6 +270,12 @@ PC0.Locked=true
 PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
 PC1.Signal=ADCx_IN11
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDIO_D2
+PC11.Mode=SD_4_bits_Wide_bus
+PC11.Signal=SDIO_D3
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDIO_CK
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 PC14-OSC32_IN.Locked=true
@@ -284,6 +299,10 @@ PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
+PC8.Mode=SD_4_bits_Wide_bus
+PC8.Signal=SDIO_D0
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDIO_D1
 PD0.Mode=CAN_Activate
 PD0.Signal=CAN1_RX
 PD1.Mode=CAN_Activate
@@ -316,6 +335,8 @@ PD15.GPIO_PuPd=GPIO_NOPULL
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Locked=true
 PD15.Signal=GPIO_Output
+PD2.Mode=SD_4_bits_Wide_bus
+PD2.Signal=SDIO_CMD
 PD4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
 PD4.GPIO_PuPd=GPIO_NOPULL
@@ -474,6 +495,8 @@ VP_ADC1_Vref_Input.Mode=IN-Vrefint
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
+VP_FATFS_VS_SDIO.Mode=SDIO
+VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim6.Mode=TIM6
